--- a/01. Acceso a Datos/WorkSpace/DireccionObjetodePersonas/.project
+++ b/01. Acceso a Datos/WorkSpace/DireccionObjetodePersonas/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DireccionObjetodePersonas</name>
+	<name>FicherosObjetos</name>
 	<comment></comment>
 	<projects>
 	</projects>
